Üyelik sistemi(Merkezi)-6

--- a/UdemyIdentityServer.Client1/Views/User/Index.cshtml
+++ b/UdemyIdentityServer.Client1/Views/User/Index.cshtml
@@ -1,5 +1,46 @@
 ﻿@{
     ViewData["Title"] = "Index";
 }
-
+@using Microsoft.AspNetCore.Authentication;
 <h3>Bu sayfayı sadece üye olan kullanıcılar görebilir.</h3>
+
+<h4> Claim verileri</h4>
+
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th>Claim Type</th>
+            <th>Claim Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in User.Claims)
+        {
+
+            <tr>
+                <td>@item.Type</td>
+                <td>@item.Value</td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<h4> Authentication verileri</h4>
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th>Auth property key</th>
+            <th>Auth property value</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in (await Context.AuthenticateAsync()).Properties.Items)
+        {
+
+            <tr>
+                <td>@item.Key</td>
+                <td>@item.Value</td>
+            </tr>
+        }
+    </tbody>
+</table>
