Üyelik sistemi(Merkezi) -11

--- a/UdemyIdentityServer.Client1/Views/User/Index.cshtml
+++ b/UdemyIdentityServer.Client1/Views/User/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Index";
 }
 @using Microsoft.AspNetCore.Authentication;
+
+<a class="btn btn-primary" asp-action="LogOut">Çıkış yap</a>
 <h3>Bu sayfayı sadece üye olan kullanıcılar görebilir.</h3>
 
 <h4> Claim verileri</h4>
