Üyelik sistemi(Merkezi) - 13

--- a/UdemyIdentityServer.Client1/Views/User/Index.cshtml
+++ b/UdemyIdentityServer.Client1/Views/User/Index.cshtml
@@ -4,6 +4,8 @@
 @using Microsoft.AspNetCore.Authentication;
 
 <a class="btn btn-primary" asp-action="LogOut">Çıkış yap</a>
+
+<a class="btn btn-success" asp-action="GetRefreshToken">Refresh token yenile</a>
 <h3>Bu sayfayı sadece üye olan kullanıcılar görebilir.</h3>
 
 <h4> Claim verileri</h4>
