Resource Owner Credentials Grant-5/6/7

--- a/UdemyIdentityServer.Client1/Views/User/Index.cshtml
+++ b/UdemyIdentityServer.Client1/Views/User/Index.cshtml
@@ -8,6 +8,8 @@
 <a class="btn btn-success" asp-action="GetRefreshToken">Refresh token yenile</a>
 <h3>Bu sayfayı sadece üye olan kullanıcılar görebilir.</h3>
 
+<h2>Hoşgeldin @User.Identity.Name</h2>
+
 <h4> Claim verileri</h4>
 
 <table class="table table-bordered">
